Fixing some marge, adding aos again cause i know how to disable it on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -170,8 +170,7 @@ dialog {
 
 h1 {
     font-size: 10vw;
-    padding-top: 3vh;
-    margin-top: 25vh;
+    padding-top: 4vh;
     margin-bottom: 8vh;
     font-family: 'Josefin Sans';
     text-align: center;
@@ -180,7 +179,7 @@ h1 {
 }
 
 h2 {
-    font-size: 9vw;
+    font-size: 8vw;
     font-family: 'Josefin Sans';
     text-shadow: 5px 5px 20px rgb(0, 0, 0, 0.5);
 }
@@ -191,6 +190,7 @@ h3 {
 }
 
 #home {
+    margin-top: 25vh;
     padding-top: 6vh;
     padding-left: 5vw;
     padding-right: 5vw;
@@ -255,10 +255,6 @@ h3 {
     text-align: end;
 }
 
-.ui.slide.masked.reveal.image {
-    height: 20vh;
-}
-
 .date {
     font-size: 0.85vw;
 }
@@ -284,13 +280,13 @@ h3 {
 }
 
 #about>h2 {
-    margin-bottom: 10vh;
+    margin-bottom: 4.5vh;
 }
 
 #aboutHeader {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 30vh;
+    margin-bottom: 20vh;
 }
 
 #aboutImg {
